[package]
name = "ruby-liquid-rust"
version = "0.1.0"
authors = ["Maciej Bielecki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = "0.7.0"
lazy_static = "*"
liquid = "0.20.0-alpha"
kstring = "0.1.0-alpha"

[lib]
name = "liquid_rust"
crate-type = ["cdylib"]
